# opengl-lab-env

./: .gitignore
exts/glew/: Makefile
projects/lab-1/: CMakeLists.txt  lab_1
projects/lab-1/code/: lab_1_app.cc  lab_1_app.h  main.cc
